--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,11 @@ spring.datasource.password=passw0rd
 spring.datasource.hikari.schema=public
 
 #spring:
- datasource:
-  url:
-  username:
-  password:
-  hikari:
-    spring.datasource.hikari.maximum-pool-size: 50
+# datasource:
+#  host:
+#  port:
+#  url:
+#  username:
+#  password:
+#  hikari:
+#    spring.datasource.hikari.maximum-pool-size: 50
