--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,9 @@
                         <goals>
                             <goal>xjc</goal>
                         </goals>
+                        <phase>none</phase>
                         <configuration>
-                            <outputDirectory>${basedir}/src/main/java</outputDirectory>
+<!--                            <outputDirectory>${basedir}/src/main/java</outputDirectory>-->
                             <sources>
                                 <source>${project.basedir}/src/main/resources/BookCatalog.xsd</source>
                             </sources>
@@ -64,12 +65,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>ch.qos.logback</groupId>
-                    <artifactId>logback-classic</artifactId>
-                </exclusion>
-            </exclusions>
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>ch.qos.logback</groupId>-->
+<!--                    <artifactId>logback-classic</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -85,16 +86,16 @@
 <!--            <artifactId>log4j-core</artifactId>-->
 <!--            <version>2.14.0</version>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.25</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-api</artifactId>-->
+<!--            <version>1.7.25</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.slf4j</groupId>-->
+<!--            <artifactId>slf4j-simple</artifactId>-->
+<!--            <version>1.7.25</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
@@ -118,7 +119,7 @@
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
-            <version>1.4.2.Final</version>
+            <version>1.3.1.Final</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
